# follow_the_drow

./: .dockerignore  .gitattributes  .gitignore  Makefile  README.md  ROS_IMAGE.md
,github/workflows/: build.yml
.github/workflows/: build.yml  build_image.yml  build_report.yml
compare/: redrow_detector.ipynb  stateless_detector.ipynb
deploy/: conf.env
deploy/config/: annotation.rviz  follow_me_behavior_example.launch  follow_the_draw.launch  follow_the_drow.launch  marker.rviz  robair_transform.yaml  visualization.rviz
deploy/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
deploy/follow_the_drow/: CMakeLists.txt  package.xml  setup.py
deploy/follow_the_drow/include/: algorithmic_detector.hpp  colors.hpp  live_loader.hpp  main.hpp  person_tracker.hpp  tracker.hpp  tracker_policy.hpp  transformation.hpp  utils.hpp  visualizer.hpp
deploy/follow_the_drow/msg/: detection.msg  raw_data.msg
deploy/follow_the_drow/nodes/: data_annotator.py  drow_detector.py  file_loader.py
deploy/follow_the_drow/scripts/follow_the_drow/: __init__.py  color.py  startup.py  tracker.py
deploy/follow_the_drow/src/: algorithmic_detecotr.cpp  algorithmic_detector.cpp  all_visualizer.cpp  colors.cpp  live_loader.cpp  main.cpp  person_tracker.cpp  raw_data_aggregator.cpp  tracker.cpp  tracker_policy.cpp  transformation.cpp  utils.cpp  visualizer.cpp
report/: basic.tex  ftdbibl.bib  main.tex
stdlib/data_outrigger/datasets/: dataset.py
stdlib/data_outrigger/detectors/: drow_detector.py
stdlib/data_outrigger/utils/: drow_utils.py  generic_utils.py
